include/dss_capi.h

    

    /*
    Array of all Monitor Names
    */
    DSS_CAPI_DLL void Monitors_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_AllNames_GR(void);
    /*
    Name of CSV file associated with active Monitor.
    */
    DSS_CAPI_DLL char* Monitors_Get_FileName(void);
    /*
    Sets the first Monitor active.  Returns 0 if no monitors.
    */
    DSS_CAPI_DLL int32_t Monitors_Get_First(void);
    /*
    Set Monitor mode (bitmask integer - see DSS Help)
    */
    DSS_CAPI_DLL int32_t Monitors_Get_Mode(void);
    /*
    Sets the active Monitor object by name
    */
    DSS_CAPI_DLL char* Monitors_Get_Name(void);
    /*
    Sets next monitor active.  Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Monitors_Get_Next(void);
    DSS_CAPI_DLL void Monitors_Reset(void);
    DSS_CAPI_DLL void Monitors_ResetAll(void);
    DSS_CAPI_DLL void Monitors_Sample(void);
    DSS_CAPI_DLL void Monitors_Save(void);
    /*
    Set Monitor mode (bitmask integer - see DSS Help)
    */
    DSS_CAPI_DLL void Monitors_Set_Mode(int32_t Value);
    DSS_CAPI_DLL void Monitors_Show(void);
    /*
    Sets the active Monitor object by name
    */
    DSS_CAPI_DLL void Monitors_Set_Name(char* Value);
    /*
    Byte Array containing monitor stream values. Make sure a "save" is done first (standard solution modes do this automatically)
    */
    DSS_CAPI_DLL void Monitors_Get_ByteStream(int8_t** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_ByteStream but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_ByteStream_GR(void);
    /*
    Number of Samples in Monitor at Present
    */
    DSS_CAPI_DLL int32_t Monitors_Get_SampleCount(void);
    DSS_CAPI_DLL void Monitors_SampleAll(void);
    DSS_CAPI_DLL void Monitors_SaveAll(void);
    /*
    Number of Monitors
    */
    DSS_CAPI_DLL int32_t Monitors_Get_Count(void);
    DSS_CAPI_DLL void Monitors_Process(void);
    DSS_CAPI_DLL void Monitors_ProcessAll(void);
    /*
    Array of doubles for the specified channel  (usage: MyArray = DSSMonitor.Channel(i)) A Save or SaveAll  should be executed first. Done automatically by most standard solution modes.
    */
    DSS_CAPI_DLL void Monitors_Get_Channel(double** ResultPtr, int32_t* ResultCount, int32_t Index);
    /*
    Same as Monitors_Get_Channel but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_Channel_GR(int32_t Index);
    /*
    Array of doubles containing frequency values for harmonics mode solutions; Empty for time mode solutions (use dblHour)
    */
    DSS_CAPI_DLL void Monitors_Get_dblFreq(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_dblFreq but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_dblFreq_GR(void);
    /*
    Array of doubles containgin time value in hours for time-sampled monitor values; Empty if frequency-sampled values for harmonics solution  (see dblFreq)
    */
    DSS_CAPI_DLL void Monitors_Get_dblHour(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_dblHour but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_dblHour_GR(void);
    /*
    Monitor File Version (integer)
    */
    DSS_CAPI_DLL int32_t Monitors_Get_FileVersion(void);
    /*
    Header string;  Array of strings containing Channel names
    */
    DSS_CAPI_DLL void Monitors_Get_Header(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_Header but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_Header_GR(void);
    /*
    Number of Channels in the active Monitor
    */
    DSS_CAPI_DLL int32_t Monitors_Get_NumChannels(void);
    /*
    Size of each record in ByteStream (Integer). Same as NumChannels.
    */
    DSS_CAPI_DLL int32_t Monitors_Get_RecordSize(void);
    /*
    Full object name of element being monitored.
    */
    DSS_CAPI_DLL char* Monitors_Get_Element(void);
    /*
    Full object name of element being monitored.
    */
    DSS_CAPI_DLL void Monitors_Set_Element(char* Value);
    /*
    Terminal number of element being monitored
    */
    DSS_CAPI_DLL int32_t Monitors_Get_Terminal(void);
    /*
    Terminal number of element being monitored.
    */
    DSS_CAPI_DLL void Monitors_Set_Terminal(int32_t Value);
    DSS_CAPI_DLL int32_t Monitors_Get_idx(void);
    DSS_CAPI_DLL void Monitors_Set_idx(int32_t Value);