src/v7/CAPI_Monitors.pas

unit CAPI_Monitors;

{$inline on}

interface

uses
    CAPI_Utils;

procedure Monitors_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
procedure Monitors_Get_AllNames_GR(); CDECL;
function Monitors_Get_FileName(): PAnsiChar; CDECL;
function Monitors_Get_First(): Integer; CDECL;
function Monitors_Get_Mode(): Integer; CDECL;
function Monitors_Get_Name(): PAnsiChar; CDECL;
function Monitors_Get_Next(): Integer; CDECL;
procedure Monitors_Reset(); CDECL;
procedure Monitors_ResetAll(); CDECL;
procedure Monitors_Sample(); CDECL;
procedure Monitors_Save(); CDECL;
procedure Monitors_Set_Mode(Value: Integer); CDECL;
procedure Monitors_Show(); CDECL;
procedure Monitors_Set_Name(const Value: PAnsiChar); CDECL;
procedure Monitors_Get_ByteStream(var ResultPtr: PByte; ResultCount: PInteger); CDECL;
procedure Monitors_Get_ByteStream_GR(); CDECL;
function Monitors_Get_SampleCount(): Integer; CDECL;
procedure Monitors_SampleAll(); CDECL;
procedure Monitors_SaveAll(); CDECL;
function Monitors_Get_Count(): Integer; CDECL;
procedure Monitors_Process(); CDECL;
procedure Monitors_ProcessAll(); CDECL;
procedure Monitors_Get_Channel(var ResultPtr: PDouble; ResultCount: PInteger; Index: Integer); CDECL;
procedure Monitors_Get_Channel_GR(Index: Integer); CDECL;
procedure Monitors_Get_dblFreq(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Monitors_Get_dblFreq_GR(); CDECL;
procedure Monitors_Get_dblHour(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Monitors_Get_dblHour_GR(); CDECL;
function Monitors_Get_FileVersion(): Integer; CDECL;
procedure Monitors_Get_Header(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
procedure Monitors_Get_Header_GR(); CDECL;
function Monitors_Get_NumChannels(): Integer; CDECL;
function Monitors_Get_RecordSize(): Integer; CDECL;
function Monitors_Get_Element(): PAnsiChar; CDECL;
procedure Monitors_Set_Element(const Value: PAnsiChar); CDECL;
function Monitors_Get_Terminal(): Integer; CDECL;
procedure Monitors_Set_Terminal(Value: Integer); CDECL;

// API extensions
function Monitors_Get_idx(): Integer; CDECL;
procedure Monitors_Set_idx(Value: Integer); CDECL;


implementation

uses
    CAPI_Constants,
    Monitor,
    DSSGlobals,
    SysUtils,
    Classes,
    Math;

type
    THeaderRec = record
        Signature: Integer;
        Version: Integer;
        RecordSize: Integer;
        Mode: Integer;
        StrBuffer: TMonitorStrBuffer;
    end;

    SingleArray = array[1..100] of Single;
    pSingleArray = ^SingleArray;

procedure ReadMonitorHeader(var HeaderRec: THeaderRec; Opt: Boolean);
var
    pMon: TMonitorObj;

begin
    pMon := ActiveCircuit.Monitors.Active;
    try
        with pmon.MonitorStream, HeaderRec do
        begin
            Seek(0, classes.soFromBeginning);
            Read(signature, Sizeof(signature));    // Signature   (32 bit Integer )
            Read(version, Sizeof(version));        // Version     (32 bit Integer )
            Read(RecordSize, Sizeof(RecordSize));    // RecordSize  (32 bit Integer )
            Read(Mode, Sizeof(Mode));                // Mode        (32 bit Integer )
            Read(StrBuffer, Sizeof(TMonitorStrBuffer)); // String      (255 char string)
        end;

    finally
          // If opt is false leave monitorstream at end of header record
        if Opt then
            pmon.MonitorStream.Seek(0, soFromEnd);    // put monitor stream pointer back where it was
    end;


end;
//------------------------------------------------------------------------------
procedure Monitors_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
var
    Result: PPAnsiCharArray;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit = NIL then
        Exit;
    Generic_Get_AllNames(ResultPtr, ResultCount, ActiveCircuit.Monitors, False);
end;

procedure Monitors_Get_AllNames_GR(); CDECL;
// Same as Monitors_Get_AllNames but uses global result (GR) pointers
begin
    Monitors_Get_AllNames(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function Monitors_Get_FileName_AnsiString(): Ansistring; inline;
var
    pMon: TMonitorObj;

begin
    Result := '';
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    Result := PMon.CSVFileName
end;

function Monitors_Get_FileName(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Monitors_Get_FileName_AnsiString());
end;
//------------------------------------------------------------------------------
function Monitors_Get_First(): Integer; CDECL;
var
    pMon: TMonitorObj;

begin
    Result := 0;  // signify no more
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.First;
    if pMon = NIL then
        Exit;
    repeat
        if pMon.enabled then
        begin
            ActiveCircuit.ActiveCktElement := pMon;
            Result := 1;
        end
        else
            pMon := ActiveCircuit.Monitors.Next;
    until (Result = 1) or (pMon = NIL);
end;
//------------------------------------------------------------------------------
function Monitors_Get_Mode(): Integer; CDECL;
var
    pMon: TMonitorObj;
begin
    Result := 0;
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    Result := PMon.Mode
end;
//------------------------------------------------------------------------------
function Monitors_Get_Name_AnsiString(): Ansistring; inline;
var
    pMon: TMonitorObj;

begin
    Result := '';
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    Result := PMon.Name
end;

function Monitors_Get_Name(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Monitors_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function Monitors_Get_Next(): Integer; CDECL;
var
    pMon: TMonitorObj;
begin
    Result := 0;  // signify no more
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Next;
    if pMon = NIL then
        Exit;
    repeat
        if pMon.Enabled then
        begin
            ActiveCircuit.ActiveCktElement := pMon;
            Result := 1;
        end
        else
            pMon := ActiveCircuit.Monitors.Next;
    until (Result > 0) or (pMon = NIL);
end;
//------------------------------------------------------------------------------
procedure Monitors_Reset(); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    PMon.ResetIt;
end;
//------------------------------------------------------------------------------
procedure Monitors_ResetAll(); CDECL;
begin
    if ActiveCircuit = NIL then
        Exit;
    MonitorClass.ResetAll;
end;
//------------------------------------------------------------------------------
procedure Monitors_Sample(); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    PMon.TakeSample;
end;
//------------------------------------------------------------------------------
procedure Monitors_Save(); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    PMon.Save;  // TranslateToCSV(False);
end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Mode(Value: Integer); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    PMon.Mode := Value;
    PMon.ResetIt;  // Always reset the monitor after a Mode change
end;
//------------------------------------------------------------------------------
procedure Monitors_Show(); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    PMon.TranslateToCSV(TRUE);
end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Name(const Value: PAnsiChar); CDECL;
begin
    if ActiveCircuit = NIL then
        Exit;
    if MonitorClass.SetActive(Value) then
    begin
        ActiveCircuit.ActiveCktElement := MonitorClass.ElementList.Active;
        ActiveCircuit.Monitors.Get(MonitorClass.Active);
    end
    else
    begin
        DoSimpleMsg('Monitor "' + Value + '" Not Found in Active Circuit.', 5004);
    end;
end;
//------------------------------------------------------------------------------
procedure Monitors_Get_ByteStream(var ResultPtr: PByte; ResultCount: PInteger); CDECL;
var
    Result: PByteArray;
    pMon: TMonitorObj;
    p: Pointer;
begin
    if ActiveCircuit <> NIL then
    begin
        pMon := ActiveCircuit.Monitors.Active;
        if PMon <> NIL then
        begin
            Result := DSS_RecreateArray_PByte(ResultPtr, ResultCount, pmon.MonitorStream.Size);
            pmon.MonitorStream.Seek(0, soFromBeginning);
            p := ResultPtr;
            pmon.MonitorStream.Read(p^, pmon.MonitorStream.Size);   // Move it all over
          // leaves stream at the end
            Exit;
        end
    end;
    Result := DSS_RecreateArray_PByte(ResultPtr, ResultCount, 1);
    Result[0] := 0;
end;

procedure Monitors_Get_ByteStream_GR(); CDECL;
// Same as Monitors_Get_ByteStream but uses global result (GR) pointers
begin
    Monitors_Get_ByteStream(GR_DataPtr_PByte, GR_CountPtr_PByte)
end;
